crates/cockpitctl-sarif/tests/snapshots/sarif_expansion_tests__multi_sensor_all_results.snap
---
source: crates/cockpitctl-sarif/tests/sarif_expansion_tests.rs
expression: sarif
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "E0308",
              "shortDescription": {
                "text": "[builddiag] E0308"
              }
            },
            {
              "id": "SEC-001",
              "shortDescription": {
                "text": "[secaudit] SEC-001"
              }
            },
            {
              "id": "clippy::unwrap_used",
              "shortDescription": {
                "text": "[clippy] clippy::unwrap_used"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "clippy::unwrap_used",
          "level": "error",
          "message": {
            "text": "unwrap in main"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/main.rs"
                },
                "region": {
                  "startLine": 10
                }
              }
            }
          ]
        },
        {
          "ruleId": "E0308",
          "level": "error",
          "message": {
            "text": "mismatched types"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/utils.rs"
                },
                "region": {
                  "startLine": 5
                }
              }
            }
          ]
        },
        {
          "ruleId": "SEC-001",
          "level": "warning",
          "message": {
            "text": "outdated dependency"
          }
        }
      ]
    }
  ]
}
