crates/cockpitctl-sarif/tests/snapshots/sarif_expansion_tests__zero_findings_empty_results.snap
---
source: crates/cockpitctl-sarif/tests/sarif_expansion_tests.rs
expression: sarif
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0"
        }
      },
      "results": []
    }
  ]
}
